@@ -1,3 +1,7 @@
+2006-05-03  Bob Weigel <rweigel@gmu.edu>
+
+        * scripts/set/setdiff.m: New arg, byrows.  New tests.
+
 2006-04-29  John W. Eaton  <jwe@octave.org>
 
 	* startup/main-rcfile: Disable some warnings.
